# abacus-skill-creator

./: .gitignore  README.md  SKILL-INDEX.md  SKILL.md  install.sh  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  quality-checks.yml
references/: export-guide.md  phase4-detection.md  pipeline-phases.md  private-repo-access.md  quality-standards.md
scripts/: bootstrap.sh  export_utils.py  install-skill.sh  install-template.sh  security_scan.py  skill_registry.py  staleness_check.py  validate.py
skills/deep-agent-chatbot-protocol/: SKILL.md
skills/deep-agent-chatbot-protocol/references/: api-reference.md  message-formats.md
skills/deep-agent-chatbot-protocol/scripts/: query_chatbot.py
skills/excel-serbian-standard-v3/: SKILL.md
skills/komunikacija-sa-korisnikom/: .abacus.donotdelete  SKILL.md
skills/komunikacija-sa-korisnikom/examples/: dobar-pristup.md  los-pristup.md
skills/komunikacija-sa-korisnikom/workflow/: checkpoint-workflow.md
tests/: test_export_utils.py  test_security_scan.py  test_staleness_check.py  test_validate.py  test_validate_parser.py
