[project]
name = "agent-skill-creator"
version = "5.0.0"
description = "Turn any workflow into reusable AI agent skills — no spec writing, no prompt engineering, no coding required."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",   # line length handled by formatter
    "E402",   # module-level imports below sys.path manipulation are intentional
    "SIM102", # nested if is sometimes clearer than combined condition
    "SIM103", # explicit if/return is sometimes clearer than inline
    "SIM105", # try/except/pass is clearer than contextlib.suppress for simple cases
    "SIM108", # ternary operator (readability preference)
]

[tool.ruff.lint.isort]
known-first-party = ["validate", "security_scan", "staleness_check"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["scripts"]
